Change in cards and location

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a style="--i:8" href="https://instagram.com/saadkhan417322?igshid=ZDdkNTZiNTM%3D"
                             target="_blank"><i class="fab fa-instagram"></i></a>
                         <a style="--i:9"
-                            href="https://www.google.com/maps/dir/31.4428465,74.2863544/@31.4427948,74.2861793,21z"
+                            href="https://www.google.com/maps/place/31%C2%B026'34.7%22N+74%C2%B017'10.4%22E/@31.442968,74.2840313,17z/data=!3m1!4b1!4m4!3m3!8m2!3d31.442968!4d74.28622?entry=ttu"
                             target="_blank"><i class="fa-solid fa-location-dot"></i></a>
                     </div>
                     <a href="./assets/Saad-Bin-Ayyaz_CV.pdf" class="btn3" download="SBA-CV.pdf">Download CV</a>
@@ -224,7 +224,16 @@
                 </ul>
             </div>
             <div class="work-list">
-
+                
+                <div class="all work js">
+                    <img src="./assets/note.jpg">
+                    <div class="layer">
+                        <h3>Note App</h3>
+                        <p>Capture, organize, and remember every idea with our intuitive Note App.</p>
+                        <a href="https://sba-dev-noteapp.netlify.app/" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
                 <div class="all work css">
                     <img src="./assets/cara.jpg">
                     <div class="layer">
@@ -238,8 +247,7 @@
                     <img src="./assets/active.jpg">
                     <div class="layer">
                         <h3>Active House Technology</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Welcome to the future of smart living with our groundbreaking Active House Technology.</p>
                         <a href="./assets/CSS pages/Assignment_3-ActiveHouse - Org/index.html" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -248,8 +256,7 @@
                     <img src="./assets/verticalTab.jpg">
                     <div class="layer">
                         <h3>Vertical Tabs</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Experience a new level of browsing convenience with our innovative Vertical Tabs feature.</p>
                         <a href="./assets/CSS pages/Assignment_6-vertical tabs/index.html" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -258,8 +265,7 @@
                     <img src="./assets/ABC_News.jpg">
                     <div class="layer">
                         <h3>ABC News</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Stay informed and connected to the world with ABC News, delivering reliable and up-to-date information at your fingertips.</p>
                         <a href="./assets/CSS pages/Assignment_7-News API/index.html" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -268,8 +274,7 @@
                     <img src="./assets/animeGen.jpg">
                     <div class="layer">
                         <h3>Anime Gnenerator</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Unleash your imagination with our Anime Generator, where you can bring your own unique characters to life in the captivating world of anime.</p>
                         <a href="./assets/JS pages/Anime Gnenerator/index.html" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -278,8 +283,7 @@
                     <img src="./assets/bml.jpg">
                     <div class="layer">
                         <h3>BMI Calculator</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Discover the key to a healthier lifestyle with our BMI Calculator, your personalized tool for assessing and managing your body mass index.</p>
                         <a href="./assets/JS pages/BMI Calculator/index.html" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -288,8 +292,7 @@
                     <img src="./assets/joke.jpg">
                     <div class="layer">
                         <h3>Dad Joke Generator</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Unleash the laughter with our Dad Joke Generator.</p>
                         <a href="./assets/JS pages/Dad Joke Generator/index.html" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -298,8 +301,7 @@
                     <img src="./assets/engDic.jpg">
                     <div class="layer">
                         <h3>English Dictionary</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Unlock words' meanings with our English Dictionary.</p>
                         <a href="./assets/JS pages/English Dictionary/index.html" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -308,8 +310,7 @@
                     <img src="./assets/feedui.jpg">
                     <div class="layer">
                         <h3>Feedback UI</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Optimize user feedback with our intuitive Feedback UI.</p>
                         <a href="./assets/JS pages/Feedback UI/index.html" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -318,19 +319,8 @@
                     <img src="./assets/temp.jpg">
                     <div class="layer">
                         <h3>Temprature Convertor</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Instantly convert temperatures between units with our Temperature Converter.</p>
                         <a href="./assets/JS pages/Temprature Convertor/index.html" target="_blank"><i
-                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    </div>
-                </div>
-                <div class="all work js">
-                    <img src="./assets/note.jpg">
-                    <div class="layer">
-                        <h3>Note App</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
-                        <a href="https://sba-dev-noteapp.netlify.app/" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -338,8 +328,7 @@
                     <img src="./assets/qgen.jpg">
                     <div class="layer">
                         <h3>Quotes Generator</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium commodi reiciendis fugit
-                            hic?</p>
+                        <p>Elevate your mindset with our Quotes Generator, inspiring you with daily doses of wisdom and motivation.</p>
                         <a href="./assets/JS pages/Random Quotes Generator/index.html" target="_blank"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
@@ -363,7 +352,7 @@
                                 class="fab fa-facebook"></i></a>
                         <a href="https://instagram.com/saadkhan417322?igshid=ZDdkNTZiNTM%3D" target="_blank"><i
                                 class="fab fa-instagram"></i></a>
-                        <a href="https://www.google.com/maps/dir/31.4428465,74.2863544/@31.4427948,74.2861793,21z"
+                        <a href="https://www.google.com/maps/place/31%C2%B026'34.7%22N+74%C2%B017'10.4%22E/@31.442968,74.2840313,17z/data=!3m1!4b1!4m4!3m3!8m2!3d31.442968!4d74.28622?entry=ttu"
                             target="_blank"><i class="fa-solid fa-location-dot"></i></a>
                     </div>
                     <a href="./assets/Saad-Bin-Ayyaz_CV.pdf" class="btn btn2" download="SBA-CV.pdf">Download CV</a>
